# shbx

./: .gitignore  Cargo.toml  README.md  commands.config.sample  shbx.config.sample
src/: api.rs  api_response.rs  command.rs  config.rs  db.rs  main.rs  openapi_doc.rs  user.rs  utils.rs
static/css/: main.css  web_adwaita.css  web_adwaita.css.map
static/js/: shellbox.js
templates/: main.html.tera
utils/: shbx.service
