[package]
name = "shbx"
version = "0.2.1"
edition = "2021"
license = "GPL-2.0"
authors = ["Foaly <foaly@silica.io>"]
documentation = "https://github.com/Foalyy/shbx"
homepage = "https://github.com/Foalyy/shbx"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["secrets", "json"] }
tokio = { version = "1.6.1", features = ["process"] }
tokio-stream = { version = "0.1.11", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
itertools = "0.11.0"
toml = "0.7.5"
rand = "0.8.5"
base64 = "0.21.2"
thiserror = "1.0.44"
strum = { version = "0.25.0", features = ["derive"] }
argon2 = "0.5.1"
serde_repr = "0.1.16"
is_executable = "1.0.1"
tokio-process-stream = "0.4.0"
unix_users = { package = "users", version = "0.11.0" }
uuid = { version = "1.4.1", features = ["v4"] }
utoipa = { version = "3.5.0", features = ["rocket_extras", "preserve_order", "preserve_path_order", "uuid"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["rocket"] }
utoipa-rapidoc = { version = "0.1.0", features = ["rocket"] }
serde_json = "1.0.105"
libc = "0.2.147"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.3"
features = ["tera"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.3"
features = ["sqlx_sqlite"]
